# kubefix

./: .gitignore  README.md  diagrams.md  fixed-manifest.yaml  generate.sh  pyproject.toml
docs/: defects.md
examples/: airflow-helm-airflow.yaml  apache-airflow-airflow.yaml  argo-argo-rollouts.yaml  argo-argo-workflows.yaml  argo-argocd-image-updater.yaml  argo-cd-oci-argo-cd.yaml  artifact-hub-artifact-hub.yaml  bitnami-elasticsearch.yaml  bitnami-external-dns.yaml  bitnami-kafka.yaml  bitnami-keycloak.yaml  bitnami-labs-sealed-secrets.yaml  bitnami-mariadb.yaml  bitnami-metallb.yaml  bitnami-metrics-server.yaml  bitnami-minio.yaml  bitnami-mongodb.yaml  bitnami-mysql.yaml  bitnami-nginx.yaml  bitnami-postgresql-ha.yaml  bitnami-postgresql.yaml  bitnami-rabbitmq.yaml  bitnami-redis-cluster.yaml  bitnami-redis.yaml  bitnami-spark.yaml  bitnami-thanos.yaml  bitnami-wordpress.yaml  cert-manager-cert-manager.yaml  chartmuseum-chartmuseum.yaml  cilium-cilium.yaml  cloudnative-pg-cloudnative-pg.yaml  cluster-autoscaler-cluster-autoscaler.yaml  codecentric-keycloak.yaml  crossplane-crossplane.yaml  datadog-datadog.yaml  descheduler-descheduler.yaml  dex-dex.yaml  elastic-eck-operator.yaml  elastic-elasticsearch.yaml  external-dns-external-dns.yaml  (+51 more)
src/kubefix/: algo1.py  algo2.py  algo3.py  algo4.py  common.py  edges.py  kubefix.kdc  main.py
src/kubefix/edges/: __init__.py  edges_context.py  helpers.py  kubefix.yaml  loader.py  process.py
